Cleaning. All tests passed on Android 4.4 but failed with java.lang.VerifyError on 4.1.2